<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/artist_input"
            android:text="@string/artist_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/song_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/song_input"
            android:text="@string/song_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/album_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/artist_name" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/album_input"
            android:text="@string/album_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/year"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/song_name" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/year_input"
            android:text="@string/year_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/add_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/album_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="100dp" />

        <EditText
            android:id="@+id/artist_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/artist_name"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <EditText
            android:id="@+id/song_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/song"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/song_name"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <EditText
            android:id="@+id/album_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/album"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_name"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <EditText
            android:id="@+id/year_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/year"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>